--- a/app/views/settings/_edit_email.haml
+++ b/app/views/settings/_edit_email.haml
@@ -1,5 +1,5 @@
 %p.in-gold-500.font-18.mb-25= t('settings.e-mail')
-= form_for(resource, as: resource_name, url: user_path(resource), html: { method: :put, class: 'general-form-md email', remote: true }) do |f|
+= form_for(resource, as: resource_name, url: user_path(resource), html: { method: :put, class: 'general-form-md email' }) do |f|
   .form-group.mb-35
     = f.label :email, t('settings.enter_e-mail'), class: 'control-label input-label'
     = f.email_field :email, autofocus: true, autocomplete: "off", class: 'form-control', placeholder: t('settings.enter_your_e-mail')
