--- a/app/views/settings/new.haml
+++ b/app/views/settings/new.haml
@@ -14,13 +14,4 @@
         .col-sm-5.col-sm-offset-1
           = render 'settings/edit_password'
         .col-sm-12
-          %p.in-gold-500.font-18.mb-25= t('settings.remove_account')
-          %form
-            .general-settings-btn
-              = button_to t('settings.please_remove_account'), registration_path(resource_name), method: :delete, class: 'btn btn-default mb-20'
-            .form-group.checkbox.general-settings-checkbox
-              %label.checkbox-label
-                %input.checkbox-input{type: "checkbox", hidden: "true"}
-                %span.checkbox-icon
-                  %i.fa.fa-check
-                %span.checkbox-text= t('settings.im_agree_lost_all_data')
+          = render 'settings/remove_account'
