--- a/app/views/reviews/_review_form.haml
+++ b/app/views/reviews/_review_form.haml
@@ -1,9 +1,9 @@
 .general-message-wrap.divider.form
   %h3= t('review.write')
-  = form_with model: Review.new, html: { id: 'post_review'}, remote: true do |f|
+  = form_for Review.new, html: { id: 'post_review'} do |f|
     = f.hidden_field :book_id, value: @book.id
     = f.hidden_field :user_id, value: current_user.id
-    = f.label :score, 'Score', class: 'control-label'
+    = f.label :score, t('review.score'), class: 'control-label'
     = f.select :score, (1..5), class: 'rating-loading', id: :review_score
     .review_score
     %br
@@ -11,4 +11,4 @@
     %br
     = f.text_area :context, class: 'form-control'
     %br
-    = f.submit 'Post', class: 'btn btn-default pull-right'
+    = f.submit t('button.post'), class: 'btn btn-default pull-right'
