--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,36 +1,41 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    %div
-      Currently waiting confirmation for: #{resource.unconfirmed_email}
-  .field
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-    - if @minimum_password_length
-      %br/
-      %em
-        = @minimum_password_length
-        characters minimum
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .field
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password, autocomplete: "off"
-  .actions
-    = f.submit "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+%main.container
+  %h1.general-title-margin= t('settings.settings')
+  %ul.nav.clearfix.mb-20{role: "tablist"}
+    %li.tab-item{role: "presentation"}
+      = link_to t('settings.address'), settings_addresses_path, class: 'tab-link'
+    %li.tab-item{role: "presentation"}
+      = link_to t('settings.privacy'), settings_privacy_path, class: 'tab-link filter-link active'
+  .tab-content
+    .row.mb-60
+      = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+        = devise_error_messages!
+        .col-sm-5
+          %p.in-gold-500.font-18.mb-25= t('settings.e-mail')
+          .form-group.mb-35
+            = f.label :email, t('settings.enter_e-mail'), class: 'control-label input-label'
+            = f.email_field :email, autofocus: true, autocomplete: "off", class: 'form-control', placeholder: t('settings.enter_your_e-mail')
+          .general-text-align
+            = f.submit t('settings.save'), class: 'btn btn-default mb-35'
+        .col-sm-5.col-sm-offset-1
+          %p.in-gold-500.font-18.mb-25= t('settings.password')
+          .form-group.mb-30
+            = f.label :current_password, t('settings.old_password'), class: "control-label input-label"
+            = f.password_field :current_password, class: "form-control", autocomplete: "off", placeholder: t('settings.old_password')
+          .form-group.mb-30
+            = f.label :password, t('settings.new_password'), class: "control-label input-label"
+            = f.password_field :password, class: "form-control", autofocus: true, autocomplete: "off", placeholder: t('settings.new_password')
+          .form-group.mb-40
+            = f.label :password_confirmation, t('settings.confirm_password'), class: "control-label input-label"
+            = f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: t('settings.confirm_password')
+          .general-text-align
+            = f.submit t('settings.save'), class: 'btn btn-default mb-10'
+        .col-sm-12
+          %p.in-gold-500.font-18.mb-25= t('settings.remove_account')
+          .general-settings-btn
+            = button_to t('settings.please_remove_account'), registration_path(resource_name), class: 'btn btn-default mb-20', data: { confirm: "Are you sure?" }, method: :delete
+          .form-group.checkbox.general-settings-checkbox
+            %label.checkbox-label#remove_account
+              %input.checkbox-input{type: "checkbox", hidden: "true"}
+              %span.checkbox-icon
+                %i.fa.fa-check
+              %span.checkbox-text= t('settings.im_agree_lost_all_data')
