--- a/app/views/settings/_edit_email.haml
+++ b/app/views/settings/_edit_email.haml
@@ -3,5 +3,6 @@
   .form-group.mb-35
     = f.label :email, t('settings.enter_e-mail'), class: 'control-label input-label'
     = f.email_field :email, autofocus: true, autocomplete: "off", class: 'form-control', placeholder: t('settings.enter_your_e-mail')
+    = f.hidden_field :update_email, value: true
   .general-text-align
     = f.submit t('settings.save'), class: 'btn btn-default mb-35'
