--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}
     %meta{name: "viewport", content: "width=device-width"}
+    = favicon_link_tag 'favicon.ico' 
     %title BookStore
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all'
